<resources>
    <string name="app_name">Football</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="leagues">Leagues</string>
    <string name="events_today">Events Today</string>
    <string name="past_events">Past Events</string>
    <string name="search">Search</string>
    <string name="sports">Sports</string>
    <string name="events">Events</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="title_activity_league_detail">LeagueDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"


    </string>
    <string name="title_activity_team_list">TeamListActivity</string>
    <string name="title_activity_players_list">PlayersListActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_team_detail">TeamDetailActivity</string>

    <string name="title_activity_player_detail">PlayerDetailActivity</string>
    <string name="content">content</string>
    <string name="soccer_leagues">Soccer Leagues</string>
    <string name="name">Team A</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="vs">VS</string>

    <string name="country">country</string>
    <string name="name1">name</string>
    <string name="position">position</string>
    <string name="symbol">:</string>
    <string name="team_b">Team B</string>
    <string name="news">News</string>
</resources>
